--- a/phonebook/package.json
+++ b/phonebook/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "json-server -p3001 -w db.json",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -16,6 +18,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "json-server": "^0.17.3",
     "vite": "^4.2.0"
   }
 }
